--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "jira-help": "index.mjs"
     },
     "scripts": {
-        "start": "node index.mjs"
+        "start": "node index.mjs",
+        "lint": "eslint ."
     },
     "author": "Allen Wong",
     "license": "MIT",
@@ -20,5 +21,13 @@
         "lodash": "^4.17.21",
         "prompts": "^2.4.2",
         "simple-git": "^3.22.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.9.0",
+        "@typescript-eslint/parser": "^8.0.1",
+        "eslint": "^9.9.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "prettier": "3.3.3"
     }
 }
