feat: update config path use homedir

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "bin": {
         "jira-help": "index.mjs"
     },
+    "engines" : {
+      "node" : ">=18.0.0"
+    },
     "scripts": {
         "start": "node index.mjs",
         "lint": "eslint ."
