--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "commander": "^12.1.0",
         "csv-reader": "^1.0.9",
         "lodash": "^4.17.21",
+        "openai": "^4.79.1",
         "openurl": "^1.1.1",
         "prompts": "^2.4.2",
         "simple-git": "^3.22.0"
